--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional pool cleaning and maintenance service in South Venice to Lakewood Ranch. A Plus Pool Cleaning Inc - Reclaim your weekends with crystal-clear water." />
-    <meta property="og:title" content="A Plus Pool Cleaning Inc - Professional Pool Service" />
-    <meta property="og:description" content="Tired of cloudy water and wasted Saturdays? Our professional pool care keeps your backyard oasis sparkling. Serving South Venice to Lakewood Ranch." />
-    <title>A Plus Pool Cleaning Inc - Professional Pool Service in Florida</title>
+    <meta name="description" content="Professional pool cleaning and maintenance service in Williston, FL. Rees's Pool Care LLC - Family-owned pool service with monthly plans starting at $150." />
+    <meta property="og:title" content="Rees's Pool Care LLC - Professional Pool Service" />
+    <meta property="og:description" content="Small, family-owned pool company serving Williston, FL. Professional pool and spa cleaning, pool-deck cleaning, and green-to-clean services. Monthly plans starting at $150." />
+    <title>Rees's Pool Care LLC - Pool Service in Williston, FL</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
